fix z-index

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,10 +9,6 @@
     radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
     radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 100%; 
-  box-sizing: border-box;
-  z-index: 1000;
-
 }
 
 .logo {
