--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,8 @@ body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;  
+  -moz-osx-font-smoothing: grayscale; 
+  z-index: 1000; 
 }
 
 .gradient-bg-welcome {
